# diminas_logger

./: .gitignore  CMakeLists.txt  main.cpp
lib/include/: diminas_logger.h
lib/src/: diminas_logger.cpp
